# so-mi

./: .gitattributes  .gitignore  .gitmodules  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  SPEC.md
.github/workflows/: build-and-release.yml  mirror-embedder-assets.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: greeting-pool.json  soul.md  soul_condensed.md
android/app/src/main/assets/embedder/: README.md
android/app/src/main/kotlin/io/somi/app/: BootingSplash.kt  ChatListScreen.kt  FirstLaunchScreen.kt  LlamaSessionService.kt  LoadingScreen.kt  MainActivity.kt  SettingsScreen.kt  SoMiApp.kt  SoMiTheme.kt
android/app/src/main/kotlin/io/somi/app/components/: SectionCard.kt  SongbirdButton.kt  SongbirdDialog.kt  SongbirdSlider.kt  SongbirdTopBar.kt
android/app/src/main/kotlin/io/somi/app/di/: LlamaContextLlmCaller.kt  LlmPlanPassQualifier.kt  ToolsModule.kt
android/app/src/main/kotlin/io/somi/app/settings/: DataBrowserScreen.kt  FaqScreen.kt  MemoryBrowserScreen.kt  ModelCatalogScreen.kt  SoulEditorScreen.kt
android/app/src/main/res/drawable/: ic_launcher_background_color.xml  ic_launcher_foreground_inset.xml  ic_launcher_monochrome.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: data_extraction_rules.xml  file_paths.xml
android/core-common/: build.gradle.kts
android/core-common/src/main/kotlin/io/somi/common/: CoreCommonMarker.kt
android/core-common/src/main/kotlin/io/somi/common/chat/: ChatState.kt  Message.kt
android/core-data/: build.gradle.kts  consumer-rules.pro
android/core-data/schemas/io.somi.data.db.SoMiDatabase/: 1.json  2.json
android/core-data/src/main/kotlin/io/somi/data/: BackupManager.kt  ChatRepository.kt  ConversationRepository.kt  DataMarker.kt  HardwareDetector.kt  ModelCatalog.kt  ModelManager.kt  ModelManifest.kt  ModelStatus.kt  ModelStorage.kt  ModelTier.kt  StorageRoots.kt
android/core-data/src/test/kotlin/io/somi/data/: RecommendModelTierTest.kt
android/core-llm/: build.gradle.kts  consumer-rules.pro
android/core-llm-llama/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
android/core-llm-llama/src/main/cpp/: CMakeLists.txt  ai_chat.cpp
android/core-llm-llama/src/main/kotlin/com/arm/aichat/: InferenceEngine.kt
android/core-llm/src/main/kotlin/io/somi/llm/: AssetsSoulPromptLoader.kt  LlamaContext.kt  LlmMarker.kt  NoOpLlamaContext.kt  SoulPromptLoader.kt  StubSoulPromptLoader.kt
android/core-rag/: build.gradle.kts
android/core-rag/objectbox-models/: default.json
android/core-rag/src/androidTest/kotlin/io/somi/rag/: RagBootstrapSmokeTest.kt
android/core-rag/src/main/kotlin/io/somi/rag/: RagBootstrap.kt  RagMarker.kt  RagOrchestrator.kt  _Bootstrap.kt
android/core-tools/: build.gradle.kts
android/core-tools/src/main/kotlin/io/somi/tools/: ToolsMarker.kt
android/core-ui/: build.gradle.kts  consumer-rules.pro
android/core-ui/src/main/kotlin/io/somi/ui/: UiMarker.kt
android/core-voice/: build.gradle.kts
android/core-voice/src/main/kotlin/io/somi/voice/: VoiceMarker.kt
android/gradle/: libs.versions.toml
keystore/: ci.keystore
knowledge/notes/: .gitkeep
knowledge/seeds/: .gitkeep
knowledge/zim/: manifest.yaml
scripts/: bootstrap-soul.sh  download-models.sh  init-keystore.sh  install-dev.sh  release.sh
soul/: soul.md
(+71 files in other folders)
